--- a/TipOff/app/assets/stylesheets/team.scss
+++ b/TipOff/app/assets/stylesheets/team.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the team controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.hero-unit {
+  height: fill;
+  width: 100%;
+  background-image: url('http://thedigitalstory.com/2013/05/03/warriors_win_round_one.jpg');
+}
+  h1 {
+    background-color: #333333;
+  }
