fixed file error

--- a/TipOff/app/views/team/index.html.erb
+++ b/TipOff/app/views/team/index.html.erb
@@ -9,8 +9,12 @@
 </section>
 <section class="choice">
   <div class="row">
-    <div class="small-6 large-centered columns gamechoice"><h1>fdsfsda</h1></div>
+    <div class="small-6 large-centered columns gamechoice">
+      <div class="gameSelection">
+      </div>
+    </div>
   </div>
+  </section>
 <section class="games">
   <div class="row">
     <div class="small-6 columns seatgeek itemtext"><h1>fdsfsda</h1></div>
