app runs off vuejs for databinding

--- a/TipOff/app/views/team/index.html.erb
+++ b/TipOff/app/views/team/index.html.erb
@@ -1,23 +1,14 @@
-<section class="hero">
-  <div class="row">
-    <div class="large-6 large-push-2 columns">
-      <div class="quote-1">
-        <p>Countdown to the next Tip-Off</p>
-      </div>
+<div id="seatgeekPrices">
+  <ul>
+    <div v-for="game in games">
+      <a href={{game.url}}>
+        <div>
+          {{ game.title }}<br>
+          {{ game.venue }}<br>
+          {{ game.location }}<br>
+          {{ game.lowest_price }}<br>
+        </div>
+      </a>
     </div>
-  </div>
-</section>
-<section class="choice">
-  <div class="row">
-    <div class="small-6 large-centered columns gamechoice">
-      <div class="gameSelection">
-      </div>
-    </div>
-  </div>
-  </section>
-<section class="games">
-  <div class="row">
-    <div class="small-6 columns seatgeek itemtext"><h1>fdsfsda</h1></div>
-    <div class="small-6 columns stubhub itemtext"><h1>fdsfdsa</h1></div>
-  </div>
-</section>
+  </ul>
+</div>
