working grid layout for mobile

--- a/tipOff/app/assets/stylesheets/team.scss
+++ b/tipOff/app/assets/stylesheets/team.scss
@@ -4,3 +4,11 @@
   height: 49em;
   background-position: center;
 }
+.hero-unit h1 {
+  color: #2C57BF;
+  text-align: center;
+}
+.hero-unit p {
+  color: #F8A428;
+  text-align: center;
+}
