--- a/tipOff/app/views/team/index.html.erb
+++ b/tipOff/app/views/team/index.html.erb
@@ -1,8 +1,25 @@
 <div class="hero-unit">
   <h1>It's time for Tip-Off</h1>
-    <p>Scroll down to see prices of the up and coming Warriors Games</p>
+  <p>Scroll down to see prices of the up and coming Warriors Games</p>
 </div>
-  <div id="seatgeekPrices">
+<div class="row">
+  <div id="seatgeekPrices" class="col-xs-6">
+  <h1>SeatGeek</h1>
+    <ul>
+      <div v-for="game in games">
+        <a href={{game.url}}>
+          <div>
+            {{ game.title }}<br>
+            {{ game.venue }}<br>
+            {{ game.location }}<br>
+            {{ game.lowest_price | currency '$' }}<br>
+          </div>
+        </a>
+      </div>
+    </ul>
+  </div>
+   <div id="stubhubPrices" class="col-xs-6">
+   <h1>Stubhub</h1>
     <ul>
       <div v-for="game in games">
         <a href={{game.url}}>
@@ -17,6 +34,4 @@
     </ul>
   </div>
 
-  <div id="stubhubPrices">
-
-  </div>
+</div>
