added new vue to create a countdown timer

--- a/tipOff/app/views/team/index.html.erb
+++ b/tipOff/app/views/team/index.html.erb
@@ -1,6 +1,7 @@
 <div class="hero-unit">
   <h1>It's time for Tip-Off</h1>
   <p>Scroll down to see prices of the up and coming Warriors Games</p>
+  <p id="gameTime">{{time}}</p>
 </div>
 <div class="row">
   <div id="seatgeekPrices" class="col-xs-6">
