--- a/tipOff/app/views/team/index.html.erb
+++ b/tipOff/app/views/team/index.html.erb
@@ -7,35 +7,37 @@
   </div>
 </div>
 <div class="row prices">
-  <div id="seatgeekPrices" class="col-xs-6 sgp">
-  <h1>SeatGeek</h1>
-    <ul>
-      <div v-for="game in games">
-        <a href={{game.url}}>
-          <div>
-            {{ game.title }}<br>
-            {{ game.venue }}<br>
-            {{ game.location }}<br>
-            {{ game.lowest_price | currency '$' }}<br>
+  <div class="container">
+    <div id="seatgeekPrices" class="col-xs-6 sgp">
+        <ul>
+      <img src="http://blogs-images.forbes.com/edzitron/files/2011/04/seatgeek-logo-300x90.png">
+          <div v-for="game in games" class="everyGame">
+            <a href={{game.url}}>
+              <div>
+                {{ game.title }}<br>
+                {{ game.venue }}<br>
+                {{ game.location }}<br>
+                Lowest Price: {{ game.lowest_price | currency '$' }}<br>
+              </div>
+            </a>
           </div>
-        </a>
+        </ul>
       </div>
-    </ul>
-  </div>
-   <div id="stubhubPrices" class="col-xs-6 shp">
-   <h1>Stubhub</h1>
-    <ul>
-      <div v-for="game in games">
-        <a href={{game.url}}>
-          <div>
-            {{ game.title }}<br>
-            {{ game.venue }}<br>
-            {{ game.location }}<br>
-            {{ game.lowest_price | currency '$' }}<br>
+     <div id="stubhubPrices" class="col-xs-6 shp">
+        <ul>
+       <img src="https://pmcvariety.files.wordpress.com/2015/03/stubhub_logo.jpg">
+          <div v-for="game in games" class="everyGame">
+            <a href={{game.url}}>
+              <div>
+                {{ game.title }}<br>
+                {{ game.venue }}<br>
+                {{ game.location }}<br>
+                Lowest Price: {{ game.lowest_price | currency '$' }}<br>
+              </div>
+            </a>
           </div>
-        </a>
-      </div>
-    </ul>
-  </div>
+        </ul>
+    </div>
 
+  </div>
 </div>
