team in jumbotron working stil need to fix seat prices and stubhub

--- a/tipOff/app/assets/stylesheets/team.scss
+++ b/tipOff/app/assets/stylesheets/team.scss
@@ -14,7 +14,7 @@ body {
   color: #003BC2;
   text-align: center;
 }
-.jumbotron p {
+.jumbotron h4 {
   color: #EEAF00;
   text-align: center;
 }
@@ -44,6 +44,6 @@ body {
 
 .everyGame {
   padding-left: 2em;
-  margin: 1em;
+  border: 1em;
   background-color: #EEEEEE
 }
