--- a/tipOff/app/views/team/index.html.erb
+++ b/tipOff/app/views/team/index.html.erb
@@ -1,8 +1,8 @@
 <div class="jumbotron">
-  <div class="container">
-
+  <div class="container" id='teamHeader'>
     <h1>It's almost time for Tip-Off</h1>
-    <p>Scroll down to see prices of the up and coming Warriors Games</p>
+    <h4>Scroll down to see prices of the up and coming Warriors Games</h4>
+    <h4>Time Until The Warriors Face The {{firstTeam}}</h4>
     <div class="clock"></div>
   </div>
 </div>
