--- a/tipOff/app/assets/stylesheets/flipbook.css
+++ b/tipOff/app/assets/stylesheets/flipbook.css
@@ -202,7 +202,8 @@
   position: absolute;
   top: -1.5em;
   right: -86px;
-  color: black;
+  font-size: large;
+  color: #EEAF00;
   text-shadow: none; }
 
 .flip-clock-divider.minutes .flip-clock-label {
