add color to flip clock

--- a/tipOff/app/assets/stylesheets/flipbook.css
+++ b/tipOff/app/assets/stylesheets/flipbook.css
@@ -203,7 +203,7 @@
   top: -1.5em;
   right: -86px;
   font-size: large;
-  color: #EEAF00;
+  color: #003BC2;
   text-shadow: none; }
 
 .flip-clock-divider.minutes .flip-clock-label {
