--- a/tipOff/app/views/team/index.html.erb
+++ b/tipOff/app/views/team/index.html.erb
@@ -26,14 +26,9 @@
      <div id="stubhubPrices" class="col-xs-6 shp">
         <ul>
        <img src="https://pmcvariety.files.wordpress.com/2015/03/stubhub_logo.jpg">
-          <div v-for="game in games" class="everyGame">
-            <a href={{game.url}}>
-              <div>
-                {{ game.title }}<br>
-                {{ game.venue }}<br>
-                {{ game.location }}<br>
-                Lowest Price: {{ game.lowest_price | currency '$' }}<br>
-              </div>
+          <div v-for="event in events" class="everyGame">
+            <a href='"https://www.stubhub.com/" + {{event.url}}'>
+            dsfasdf
             </a>
           </div>
         </ul>
