--- a/tipOff/app/assets/stylesheets/team.scss
+++ b/tipOff/app/assets/stylesheets/team.scss
@@ -43,7 +43,8 @@ body {
 }
 
 .everyGame {
+  margin-top: 1em;
   padding-left: 2em;
-  border: 1em;
+  border-radius: 4em;
   background-color: #EEEEEE
 }
